* Fixed: GameToolbar prevented from clicking behind it.

--- a/MobileClient/www/Assets/Game.css
+++ b/MobileClient/www/Assets/Game.css
@@ -34,6 +34,14 @@
 	z-index: 100;
 	
 	text-align: center;
+	
+	pointer-events: none;
+
+}
+
+#GameToolbar *
+{
+	pointer-events: auto;
 }
 
 #LbCredits
